[gd_scene load_steps=13 format=3 uid="uid://bpbiseieir8f4"]

[ext_resource type="Script" path="res://scripts/firstCutScene.gd" id="1_j4m1s"]
[ext_resource type="Texture2D" uid="uid://uqx5xmkhx21c" path="res://assets/bg2.png" id="2_7ml8b"]
[ext_resource type="Texture2D" uid="uid://dubhx4tj8f1ux" path="res://assets/bg3.png" id="3_kh7hr"]
[ext_resource type="FontFile" uid="uid://dkntq8a46w3jl" path="res://assets/fonts/early_gameboy/Early GameBoy.ttf" id="4_8p52l"]
[ext_resource type="FontFile" uid="uid://b6fjyba1rccni" path="res://assets/fonts/public_pixel/PublicPixel.ttf" id="5_lvg8k"]
[ext_resource type="Texture2D" uid="uid://b3cmubkg8vno8" path="res://assets/ie.png" id="6_otrxp"]
[ext_resource type="Texture2D" uid="uid://d4mwhsxx3r7x8" path="res://assets/mcafeelogo.png" id="7_bisw0"]
[ext_resource type="Texture2D" uid="uid://1kvjq36ghff" path="res://assets/popup.png" id="8_sfofx"]
[ext_resource type="Texture2D" uid="uid://d3drfhuwbfyw8" path="res://assets/alert.png" id="9_rfd6l"]
[ext_resource type="Texture2D" uid="uid://c5br2tvv7h50p" path="res://assets/button.png" id="10_loyjq"]
[ext_resource type="Texture2D" uid="uid://cd0lkm8r8m3uh" path="res://assets/terminal.png" id="11_qg8mr"]
[ext_resource type="Texture2D" uid="uid://cmmb6j0qyyic0" path="res://assets/cursor.png" id="12_b811l"]

[node name="firstCutScene" type="Node2D"]
script = ExtResource("1_j4m1s")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(80, 72)
texture = ExtResource("2_7ml8b")

[node name="task_bar" type="Sprite2D" parent="."]
position = Vector2(80, 137)
texture = ExtResource("3_kh7hr")

[node name="score" type="Label" parent="."]
visible = false
offset_left = 27.0
offset_top = 134.0
offset_right = 220.0
offset_bottom = 191.0
scale = Vector2(0.3, 0.297)
theme_override_fonts/font = ExtResource("4_8p52l")
text = "scr:  "

[node name="Label" type="Label" parent="."]
offset_left = 5.0
offset_top = 37.0
offset_right = 277.0
offset_bottom = 94.0
scale = Vector2(0.399589, 0.395951)
theme_override_fonts/font = ExtResource("5_lvg8k")
text = "anti
virus

"

[node name="lives" type="Label" parent="."]
visible = false
offset_left = 99.0
offset_top = 133.0
offset_right = 242.0
offset_bottom = 190.0
scale = Vector2(0.3, 0.297)
theme_override_fonts/font = ExtResource("4_8p52l")
text = "<3"

[node name="trash_icon" type="Sprite2D" parent="."]
position = Vector2(17, 68)
texture = ExtResource("6_otrxp")

[node name="Label" type="Label" parent="trash_icon"]
offset_left = -16.0
offset_top = 8.0
offset_right = 256.0
offset_bottom = 46.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("5_lvg8k")
text = "trash

"

[node name="internet_icon" type="Sprite2D" parent="."]
position = Vector2(16, 97)
texture = ExtResource("6_otrxp")

[node name="Label" type="Label" parent="internet_icon"]
offset_left = -7.0
offset_top = 8.0
offset_right = 265.0
offset_bottom = 46.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("5_lvg8k")
text = "net

"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(80, 72)
zoom = Vector2(4, 4)
position_smoothing_enabled = true

[node name="icon" type="Sprite2D" parent="."]
position = Vector2(18, 25)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_bisw0")

[node name="popup" type="Sprite2D" parent="."]
visible = false
position = Vector2(82, 76)
scale = Vector2(1.2, 1)
texture = ExtResource("8_sfofx")

[node name="alert" type="Label" parent="popup"]
offset_left = -23.3333
offset_top = -10.0
offset_right = 255.667
offset_bottom = 47.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("5_lvg8k")
theme_override_font_sizes/font_size = 0
text = "Can't open. Your 
machine does not
have enough SPACE
"
horizontal_alignment = 1

[node name="Alert" type="Sprite2D" parent="popup"]
position = Vector2(-30, -6)
scale = Vector2(0.833333, 1)
texture = ExtResource("9_rfd6l")

[node name="Button" type="Sprite2D" parent="popup"]
position = Vector2(-0.833328, 8)
scale = Vector2(0.833333, 1)
texture = ExtResource("10_loyjq")

[node name="buttonOk" type="Label" parent="popup"]
offset_left = -4.16663
offset_top = 6.0
offset_right = 411.833
offset_bottom = 63.0
scale = Vector2(0.2, 0.198)
theme_override_fonts/font = ExtResource("5_lvg8k")
text = "OK
"

[node name="terminal" type="Sprite2D" parent="."]
visible = false
position = Vector2(77, 72)
texture = ExtResource("11_qg8mr")

[node name="terminalText" type="Label" parent="terminal"]
offset_left = -54.0
offset_top = -64.0
offset_right = 490.0
offset_bottom = 468.0
scale = Vector2(0.2, 0.198)
theme_override_fonts/font = ExtResource("5_lvg8k")

[node name="cursor" type="Sprite2D" parent="."]
position = Vector2(143, 36)
texture = ExtResource("12_b811l")

[node name="textTimer" type="Timer" parent="."]
